--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -18,7 +18,12 @@ header h1 a:hover {
 }
 #logo {
   padding: 10px;
-  color: black;
+  display: inline-block;
+  width: 100%;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  padding: 8px 0;
 }
 nav li a:hover {
   color: #7e8aa2;
